--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -15,17 +15,38 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- Backand SDK for Angular -->
+    <script src="//cdn.backand.net/backand/dist/1.8.2/backand.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+</head>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+<body ng-app="starter" ng-controller="AppCtrl">
+
+<ion-pane>
+    <ion-header-bar class="bar-stable">
+        <h1 class="title">My Backand TODO List</h1>
+    </ion-header-bar>
+
+    <ion-content class="has-header">
+        <div class="item-input-inset">
+            <label class="item-input-wapper">
+                <input type="text" placeholder="New Todo" ng-model="input.name">
+            </label>
+            <button class="button button-balanced button-small" ng-click="addTodo()">Add Todo</button>
+        </div>
+        <ion-list can-swipe="true">
+            <ion-item ng-repeat="item in todos">
+                {{item.name}}
+                <ion-option-button class="button-assertive" ng-click="deleteTodo(item.id)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+    </ion-content>
+</ion-pane>
+</body>
 </html>
